# Spanda

./: Cargo.toml  README.md
crates/wm-core/: Cargo.toml
crates/wm-core/src/: color.rs  dct.rs  dft.rs  lib.rs  phash.rs  polar.rs  qim.rs  radial.rs  spreading.rs  tiles.rs
crates/wm-detect/: Cargo.toml
crates/wm-embed/: Cargo.toml
crates/wm-keys/: Cargo.toml
crates/wm-keys/src/: certificates.rs  device.rs  lib.rs  master.rs  signing.rs
crates/wm-keys/tests/: integration_test.rs
crates/wm-ledger/: Cargo.toml
crates/wm-verify/: Cargo.toml
