[workspace]
resolver = "2"
members = [
    "crates/wm-core",
    "crates/wm-keys",
    "crates/wm-detect",
    "crates/wm-ledger",
    "crates/wm-embed",
    "crates/wm-verify",
]

[workspace.dependencies]
image = "0.25.2"
rustfft = "6.2.0"
num-complex = "0.4.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.11", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
