[package]
name = "wm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
